opam-version: "2.0"
name: "monadlib"
version: "1.0.15"
maintainer: "dev@besport.com"
homepage: "https://github.com/besport/monadlib"
dev-repo: "git+https://github.com/besport/monadlib.git"
bug-reports: "https://github.com/besport/monadlib/issues"
authors: ["Phil Scott" "Jan Rochel"]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.07.0"}
  "dune" {build & >= "1.11.0"}
  "batteries" {>= "2.0"}
  "ocamlbuild" {build}
]
synopsis: "A starter library for monads, with transformers and applicatives"
