opam-version: "2.0"
name: "monadlib"
version: "2.0.0"
maintainer: "dev@besport.com"
homepage: "https://github.com/besport/monadlib"
dev-repo: "git+https://github.com/besport/monadlib.git"
bug-reports: "https://github.com/besport/monadlib/issues"
authors: ["Phil Scott" "Jan Rochel"]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.10.0"}
  "dune" {build & >= "1.11.0"}
  "batteries" {>= "3.3.0"}
  "ocamlbuild" {build}
]
synopsis: "A starter library for monads, with transformers and applicatives"
