(library
 (name monadlib)
 (public_name monadlib)
 (modules
  applicative
  collection
  continuation
  identity
  lazy
  lazyList
  lazyPlus
  list
  monad
  option
  reader
  result
  retry
  state
  stream
  tagTree
  writer)
 (libraries batteries))

(env
 (_
  (flags
   (:standard -w +A-4-41))))
