(library
 (name monadlib)
 (public_name monadlib)
 (modules
  applicative
  collection
  continuation
  identity
  lazy
  lazyList
  lazyPlus
  list
  monad
  monadPlus
  monoid
  option
  reader
  result
  retry
  state
  stream
  tagTree
  writer)
 (libraries batteries.unthreaded))

(env
 (_
  (flags
   (:standard -w +A-4-41-70))))
